feat: add gh workflows and electron base

--- a/.gitignore
+++ b/.gitignore
@@ -283,3 +283,14 @@ error_log
 
 *.bak
 *.backup
+
+
+                                             
+#     _/      _/                  _/           
+#    _/_/    _/    _/_/      _/_/_/    _/_/    
+#   _/  _/  _/  _/    _/  _/    _/  _/_/_/_/   
+#  _/    _/_/  _/    _/  _/    _/  _/          
+# _/      _/    _/_/      _/_/_/    _/_/_/     
+
+node_modules                                             
+                                             
