--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,10 @@ jobs:
     - name: Setup Node
       uses: actions/setup-node@v2
       with:
-        node-version: '16'
+        node-version: '18'
+    - name: Change to Application Directory
+      run: cd application
     - name: Install Dependencies
       run: npm install
     - name: Lint Code
       run: npm run lint
-    - name: Run Tests
-      run: npm test
