--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,17 @@
-name: Continuous Integration
+name: Commit Linting
 
-on: [push, pull_request]
+on:
+  pull_request:
+    branches:
+      - main  # Adjust this as needed for your target branch(es)
 
 jobs:
-  lint-and-test:
+  commitlint:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Setup Node
-      uses: actions/setup-node@v2
+    - name: Fetch all history for all tags and branches
+      run: git fetch --prune --unshallow
+    - uses: wagoid/commitlint-github-action@v4
       with:
-        node-version: '18'
-    - name: Change to Application Directory
-      run: cd application
-    - name: Install Dependencies
-      run: npm install
-    - name: Lint Code
-      run: npm run lint
+        configFile: application/.commitlintrc.json  # Ensure this points to your commitlint config if it's not at the root
