--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -1,10 +1,17 @@
 name: Commit Linting
 
-on: [push, pull_request]
+on:
+  pull_request:
+    branches:
+      - main  # Adjust this as needed for your target branch(es)
 
 jobs:
   commitlint:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Fetch all history for all tags and branches
+      run: git fetch --prune --unshallow
     - uses: wagoid/commitlint-github-action@v4
+      with:
+        configFile: application/.commitlintrc.json  # Ensure this points to your commitlint config if it's not at the root
