--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -1,17 +1,26 @@
-name: Commit Linting
+name: CommitLint
 
 on:
   pull_request:
-    branches:
-      - main  # Adjust this as needed for your target branch(es)
 
 jobs:
-  commitlint:
+
+  run-commitlint-on-pr:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2
-    - name: Fetch all history for all tags and branches
-      run: git fetch --prune --unshallow
-    - uses: wagoid/commitlint-github-action@v4
-      with:
-        configFile: application/.commitlintrc.json  # Ensure this points to your commitlint config if it's not at the root
+
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14.x
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Validate all commits from PR
+        run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
