--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Build and Deploy
-      uses: JamesIves/github-pages-deploy-action@4.1.3
+    - name: Deploy
+      uses: JamesIves/github-pages-deploy-action@v4
       with:
         branch: gh-pages  # The branch the action should deploy to.
         folder: application/web  # The folder the action should deploy.
