test: second test gh-actions

--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -4,20 +4,19 @@ on:
   pull_request:
 
 jobs:
-
   run-commitlint-on-pr:
     runs-on: ubuntu-latest
 
     steps:
-
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
-          node-version: 14.x
+          node-version: '18.x'  # Updated to Node.js 18
 
       - name: Install dependencies
         run: npm install
