--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -17,7 +17,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '18.x'  # Updated to Node.js 18
-
+      - name: Change to application directory
+        run: cd application
       - name: Install dependencies
         run: npm install
 
