--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,17 +5,16 @@ on: [pull_request]
 jobs:
   lint-and-test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: application
     steps:
       - uses: actions/checkout@v2
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
           node-version: '18'
-      - name: Change to application directory
-        run: cd application
       - name: Install Dependencies
         run: npm install
-        working-directory: application
       - name: Lint Code
         run: npm run lint
-        working-directory: application
