--- a/application/package.json
+++ b/application/package.json
@@ -4,6 +4,7 @@
   "description": "Electron based dev journal app",
   "main": "main.js",
   "scripts": {
+    "lint": "eslint . --config eslint.config.mjs --fix",
     "prod": "NODE_ENV=production electron .",
     "dev": "NODE_ENV=development electron .",
     "generate-docs": "jsdoc -c jsdoc.json"
