--- a/application/package.json
+++ b/application/package.json
@@ -15,12 +15,14 @@
     "electron": "^30.0.3",
     "fs": "^0.0.1-security",
     "jest": "^29.7.0",
-    "jsdoc": "^4.0.3"
+    "jsdoc": "^4.0.3",
+    "codemirror": "^6.65.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.2.0",
+    "@codemirror/buildhelper": "^1.0.0",
     "eslint": "^9.2.0",
     "globals": "^15.2.0"
   }
