test: separated unit and e2e tests and added a few tests to test sidebar features

--- a/application/package.json
+++ b/application/package.json
@@ -8,8 +8,8 @@
     "prod": "NODE_ENV=production electron .",
     "dev": "NODE_ENV=development electron .",
     "generate-docs": "jsdoc web -r -d ../docs",
-    "test": "jest",
-    "test:e2e": "npx playwright test tests/",
+    "test": "jest --testPathPattern=./tests/unit/",
+    "test:e2e": "npx playwright test tests/e2e/",
     "clean": "rm -rf dist output",
     "prebuild": "mkdir dist output",
     "package-osx": "npm run clean && npm run prebuild && npx electron-packager . --platform=darwin --arch=x64 --out=./dist --overwrite --icon=instone-rock.icns --app-bundle-id=team3.instone --app-version=1.0.0 --electron-version=14.0.0 --ignore=node_modules",
