--- a/application/package.json
+++ b/application/package.json
@@ -8,7 +8,8 @@
     "prod": "NODE_ENV=production electron .",
     "dev": "NODE_ENV=development electron .",
     "generate-docs": "jsdoc web -r -d ../docs",
-    "test": "jest",
+    "test": "jest --testPathPattern=./tests/unit/",
+    "test:e2e": "npx playwright test tests/e2e/",
     "clean": "rm -rf dist output",
     "prebuild": "mkdir dist output",
     "package-osx": "npm run clean && npm run prebuild && npx electron-packager . --platform=darwin --arch=x64 --out=./dist --overwrite --icon=instone-rock.icns --app-bundle-id=team3.instone --app-version=1.0.0 --electron-version=14.0.0 --ignore=node_modules",
@@ -30,7 +31,6 @@
     "@electron/packager": "^18.3.2",
     "electron": "^30.0.3",
     "fs": "^0.0.1-security",
-    "jest": "^29.7.0",
     "jsdoc": "^4.0.3"
   },
   "devDependencies": {
@@ -38,7 +38,9 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.2.0",
+    "@playwright/test": "^1.44.1",
     "eslint": "^9.2.0",
-    "globals": "^15.2.0"
+    "globals": "^15.2.0",
+    "jest": "^29.7.0"
   }
 }
