--- a/application/package.json
+++ b/application/package.json
@@ -30,8 +30,7 @@
     "@codemirror/view": "^6.0.0",
     "@electron/packager": "^18.3.2",
     "electron": "^30.0.3",
-    "fs": "^0.0.1-security",
-    "jsdoc": "^4.0.3"
+    "fs": "^0.0.1-security"
   },
   "devDependencies": {
     "@codemirror/buildhelper": "^1.0.0",
@@ -41,6 +40,7 @@
     "@playwright/test": "^1.44.1",
     "eslint": "^9.2.0",
     "globals": "^15.2.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jsdoc": "^4.0.3"
   }
 }
