--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ logs/
 tmp/
 cache/
 application/test-results
-
+application/mock/*
 
 #######################################
 # Archives                            #
